Fix: Text cont fixed at 400px wide

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <div class="main-cont">
 
-        <div style="width: 20%; height: 100vh; background-color: transparent; float: left;">
+        <div style="width: calc((100% - 400px)/2); height: 100vh; background-color: red; float: left;">
 
         </div>
-        <div class="text-cont" style="width: 60%;">
+        <div class="text-cont" style="width: 400px;">
 
             <div class="main-cont-buffer"></div>
 
