Fix: debug color for left padding div

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="main-cont">
 
-        <div style="width: calc((100% - 400px)/2); height: 100vh; background-color: red; float: left;">
+        <div style="width: calc((100% - 400px)/2); height: 100vh; background-color: transparent; float: left;">
 
         </div>
         <div class="text-cont" style="width: 400px;">
