Fix: mobile rendering issues

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div style="width: calc((100% - 550px)/2); height: 100vh; background-color: transparent; float: left;">
 
         </div>
-        <div class="text-cont" style="width: 550px;">
+        <div class="text-cont" style="width: min(550px, 100%);">
 
             <div class="main-cont-buffer"></div>
 
@@ -39,7 +39,7 @@
                     <li class="cont-li" id="cv-cont">• <a href="">C.V.</a></li>
                     <li class="cont-li" id="testi-cont">• <a href="">Testimonials</a></li>
                 </ul>
-                <div style="width: 100px;"></div>
+                <div style="width: 20px;"></div>
                 <img id="cont-icon" style="filter: blur(0.5px);" src="">
             </div>
     
@@ -209,6 +209,7 @@
                     <h2>Additional Projects</h2>
                     
                     <li><b>Fractal Renderer:</b> <span class="tag tblue" style="font-size: small; border-width: 2px;">C++</span><span class="tag tred" style="font-size: small; border-width: 2px;">OpenGL</span> Developed a from-scratch fractal renderer with real-time exploration of Mandelbrot and Julia sets, utilizing hardware acceleration for smooth performance.</li>
+                    <br>
                     <li><b>Godot First-Person Character Controller Plugin:</b> <span class="tag tblue" style="font-size: small; border-width: 2px;">gd</span><span class="tag tred" style="font-size: small; border-width: 2px;">GameDev</span> An open-source, drop-in first-person character controller plugin for the Godot engine. The plugin has received positive feedback from users and gained 17 stars on <a href="https://github.com/sammburr/Basic-FPS-Player-GODOT-4.0">GitHub.</a></li>
                 </p>
 
