Add: social links + cv

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     <li class="cont-li" id="intro-cont">• <a href="#intro-div">Introduction</a></li>
                     <li class="cont-li" id="skills-cont">• <a href="#skills-div">Skills</a></li>
                     <li class="cont-li" id="proj-cont">• <a href="#proj-div">Projects</a></li>
-                    <li class="cont-li" id="cv-cont">• <a href="">C.V.</a></li>
-                    <li class="cont-li" id="testi-cont">• <a href="">Testimonials</a></li>
+                    <li class="cont-li" id="cv-cont">• <a href="#link-div">Links + C.V.</a></li>
+                    <!-- <li class="cont-li" id="testi-cont">• <a href="">Testimonials</a></li> -->
                 </ul>
                 <div style="width: 20px;"></div>
                 <img id="cont-icon" style="filter: blur(0.5px);" src="">
@@ -215,7 +215,22 @@
 
                 <p>
                     <a href="#skills-div">back: skills</a><br>
-                    <a href="#proj-div">next: projects</a>
+                    <a href="#link-div">next: links + c.v.</a>
+                </p>
+            </div>
+
+            <div style="height: 90vh;"></div>
+
+            <div class="introduction" id="link-div">
+                <h1>Links <img src="word_end_lines.svg"> </h1>
+                <p>
+                    <li><a href="cv.pdf" target="_blank">C.V. (pdf)</a></li><br>
+                    <li><a href="https://www.linkedin.com/in/sammburr/" target="_blank">Linked<span style="background-color: blue; color: white;">In</span></a></li><br>
+                    <li><a href="https://github.com/sammburr" target="_blank">GitHub</a></li>
+                    
+                </p>
+                    <a href="#proj-div">back: projects</a><br>
+                    <!-- <a href="#testi-div">next: testimonials</a> -->
                 </p>
             </div>
 
